# Shears

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cargo-sources.json  meson.build  meson_options.txt  sonar-project.properties
.forgejo/: pull_request_template.yaml
.forgejo/issue_template/: bug_report.yaml  feature_request.yaml
.forgejo/workflows/: checks.yml  release.yml
.github/workflows/: ci.yml
build-aux/: com.fvtronics.quire.Devel.json  com.fvtronics.quire.json  com.fvtronics.shears.Devel.json  com.fvtronics.shears.json
data/: com.fvtronics.quire.desktop.in.in  com.fvtronics.quire.gschema.xml.in  com.fvtronics.quire.metainfo.xml.in.in  com.fvtronics.shears.desktop.in.in  com.fvtronics.shears.gschema.xml.in  com.fvtronics.shears.metainfo.xml.in.in
data/resources/: meson.build  resources.gresource.xml
hooks/: pre-commit.hook
po/: LINGUAS  POTFILES.in  es.po  et.po  nl.po  quire.pot  shears.pot
src/: app.rs  main.rs  meson.build
src/modals/: about.rs  mod.rs  password.rs
src/pdf/: compress.rs  error.rs  extract.rs  merge.rs  metadata.rs  mod.rs  organize.rs  preview.rs  split.rs  test_utils.rs  util.rs  watermark.rs
src/tools/: compress.rs  extract.rs  merge.rs  metadata.rs  mod.rs  organize.rs  page.rs  split.rs  watermark.rs
