[package]
name = "quire"
version = "0.2.1"
authors = ["Francisco Vásquez Cuevas <fvasquez.public@fvtronics.com>"]
edition = "2024"
publish = false
rust-version = "1.96"
license = "GPL-3.0-or-later"

[profile.release]
lto = true

[dependencies]
cairo-rs = { version = "0.22.0", features = ["png"] }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
lopdf = { version = "0.41.0", default-features = false }
poppler-rs = "0.26.0"
relm4 = { version = "0.11.0", features = ["libadwaita", "gnome_50"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
